--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "react-native-demo-ble-app",
-    "slug": "react-native-demo-ble-app",
+    "slug": "bluetoothdemo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.teamcmcwebcode.bluetoothdemo"
     },
     "web": {
       "bundler": "metro",
@@ -24,6 +25,15 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "react-native-ble-manager",
+        {
+          "isBleRequired": true,
+          "neverForLocation": true,
+          "companionDeviceEnabled": false,
+          "bluetoothAlwaysPermission": "Allow BLE DEMO APP to connect to bluetooth devices"
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -36,6 +46,21 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "77577e9f-019f-4c83-8cfa-e8bdae50a538"
+      }
+    },
+    "owner": "team-cmcwebcode",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/77577e9f-019f-4c83-8cfa-e8bdae50a538"
     }
   }
 }
