build: setup profile for EAS

--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,41 @@
         "resourceClass": "m-medium"
       },
       "channel": "development"
+    },
+    "preview": {
+      "distribution": "internal",
+      "channel": "staging",
+      "ios": {
+        "resourceClass": "m-medium"
+      }
+    },
+    "production": {
+      "channel": "production",
+      "ios": {
+        "resourceClass": "m-medium"
+      }
+    }
+  },
+  "submit": {
+    "preview": {
+      "ios": {
+        "appleId": "infinitymichael7@gmail.com",
+        "ascAppId": "",
+        "appleTeamId": ""
+      },
+      "android": {
+        "track": "internal"
+      }
+    },
+    "production": {
+      "ios": {
+        "appleId": "infinitymichael7@gmail.com",
+        "ascAppId": "",
+        "appleTeamId": ""
+      },
+      "android": {
+        "track": "production"
+      }
     }
   }
 }
