--- a/.github/workflows/build-and-submit-prod.yml
+++ b/.github/workflows/build-and-submit-prod.yml
@@ -1,27 +1,27 @@
-name: Build & Submit Production
+# name: Build & Submit Production
 
-on:
-  pull_request:
-    branches: [main]
-    paths-ignore: ["docs/**"]
-    types: [opened, synchronize]
-    # Only run if PR is from `dev` branch
-    if: github.head_ref == 'dev'
+# on:
+#   pull_request:
+#     branches: [main]
+#     paths-ignore: ["docs/**"]
+#     types: [opened, synchronize]
+#     # Only run if PR is from `dev` branch
+#     if: github.head_ref == 'dev'
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
 
-      - run: npm install -g eas-cli
-      - run: eas login --token ${{ secrets.EAS_TOKEN }}
+#       - run: npm install -g eas-cli
+#       - run: eas login --token ${{ secrets.EAS_TOKEN }}
 
-      - run: eas build --platform android --profile production --non-interactive --no-wait
-      - run: eas build --platform ios --profile production --non-interactive --no-wait
+#       - run: eas build --platform android --profile production --non-interactive --no-wait
+#       - run: eas build --platform ios --profile production --non-interactive --no-wait
 
-      - run: eas submit --platform android --profile production --non-interactive
-      - run: eas submit --platform ios --profile production --non-interactive
+#       - run: eas submit --platform android --profile production --non-interactive
+#       - run: eas submit --platform ios --profile production --non-interactive
