--- a/.github/workflows/preview-android-feature.yml
+++ b/.github/workflows/preview-android-feature.yml
@@ -2,13 +2,13 @@ name: Preview Android Build (Feature Branch)
 
 on:
   pull_request:
-    types: [opened, synchronize]
     branches: [main]
-    # paths-ignore: ["docs/**"]
-
+    paths-ignore: ["docs/**"]
+    types: [opened, synchronize]
+    # Only run if PR is from `dev` branch
+    if: github.head_ref == 'dev'
 jobs:
   preview-android:
-    # if: startsWith(github.head_ref, 'feature/')
     runs-on: ubuntu-latest
 
     steps:
@@ -16,13 +16,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: yarn
+         cache: yarn
+
 
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
-          token: ${{ secrets.EAS_TOKEN }}
+          token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
         run: yarn install
