--- a/.github/workflows/preview-android-feature.yml
+++ b/.github/workflows/preview-android-feature.yml
@@ -3,14 +3,10 @@ name: Preview Android Build (Feature Branch)
 on:
   pull_request:
     branches: [main]
-    paths-ignore: ["docs/**"]
-    types: [opened, synchronize]
-    # Only run if PR is from `dev` branch
-    if: github.head_ref == 'dev'
-jobs:
-  preview-android:
-    runs-on: ubuntu-latest
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
