--- a/.github/workflows/ota-publish.yml
+++ b/.github/workflows/ota-publish.yml
@@ -1,23 +1,32 @@
-# name: OTA Publish to Production
+name: OTA Publish to Production
 
-# on:
-#   pull_request:
-#     branches: [main]
-#     types: [opened, synchronize]
-#     # Only if PR is from `ota/*`
-#     if: startsWith(github.head_ref, 'ota/')
+on:
+  pull_request:
+    branches: [main]
+    types: [opened, reopened]
+jobs:
+  publish-ota:
+    if: startsWith(github.head_ref, 'ota/')
+    runs-on: ubuntu-latest
 
-# jobs:
-#   publish-ota:
-#     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn
 
-#       - run: npm install -g eas-cli
-#       - run: eas login --token ${{ secrets.EAS_TOKEN }}
+      - name: Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: 16.1.0
+          token: ${{ secrets.EAS_TOKEN }}
 
-#       - run: eas update --channel production --platform android --non-interactive
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Publish OTA to Production Channel
+        run: eas update --channel production --platform android --non-interactive
