--- a/.github/workflows/preview-android-feature.yml
+++ b/.github/workflows/preview-android-feature.yml
@@ -35,15 +35,4 @@ jobs:
 
       - name: Trigger EAS Android build (preview)
         id: eas_build
-        run: |
-          eas build --platform android --profile preview --non-interactive --json > build.json
-          BUILD_URL=$(cat build.json | jq -r '.[0].artifacts.buildUrl')
-          echo "BUILD_URL=$BUILD_URL" >> $GITHUB_ENV
-
-      - name: Post PR comment with preview link
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          BUILD_URL: ${{ env.BUILD_URL }}
-        run: |
-          gh pr comment "$PR_URL" --body "🚀 Preview APK is ready! [Download here]($BUILD_URL)"
+        run: eas build --platform android --profile preview --non-interactive 
